[package]
name = "cloudflare-dynamic-ip-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
merge = "0.1.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
simple_logger = { version = "1.16.0", features = ["timestamps", "colors", "stderr"] }
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"